--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
