--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.1.1",
     "bcrypt": "^5.1.1",
+    "date-fns": "^2.30.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
