--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "next-intl": "^3.1.4",
+    "next-usequerystate": "^1.13.0",
     "react": "^18",
     "react-dom": "^18"
   },
