--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 BASE_URL=http://localhost:3000
-MONGODB_URI=mongodb+srv://acs-admin-db-user:VQiL6GvVd3WTQ8ec@cluster0.r3mom85.mongodb.net/?retryWrites=true&w=majority
-MONGODB_DBNAME=acs-local-db
+SERVICE_URL=https://amateur-cycling-stats-back.onrender.com
