--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "@vercel/analytics": "^1.1.1",
     "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.1",
-    "next": "14.0.3",
+    "next": "^14.2.16",
     "next-auth": "^4.24.5",
     "next-intl": "^3.1.4",
     "next-usequerystate": "^1.13.0",
+    "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qs": "^6.9.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
